fix: un-double-wrap list actions

--- a/packages/heartwood-components/components/event-details/event-details.scss
+++ b/packages/heartwood-components/components/event-details/event-details.scss
@@ -42,9 +42,9 @@
 	}
 
 	// TODO: Fix the root cause, which is double-nesting when the list item has actions
-	.list-item__actions-wrapper {
-		padding-top: 0.25rem;
-	}
+	// .list-item__actions-wrapper {
+	// 	padding-top: 0.25rem;
+	// }
 }
 
 .event-details__button-wrapper {
